--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
    "scripts": {
       "dev": "vite dev",
       "build": "vite build",
-      "preview": "vite preview",
       "prepare": "svelte-kit sync || echo ''",
+      "preview": "npm run build && wrangler dev",
       "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
       "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-      "postinstall": "npx bknd copy-assets --out static"
+      "deploy": "npm run build && wrangler deploy",
+      "postinstall": "npx bknd copy-assets --out static && npm run cf-typegen",
+      "cf-typegen": "wrangler types ./src/worker-configuration.d.ts"
    },
    "devDependencies": {
       "@sveltejs/adapter-auto": "^7.0.0",
       "@sveltejs/kit": "^2.48.5",
       "@sveltejs/vite-plugin-svelte": "^6.2.1",
+      "@types/node": "^24.10.1",
       "svelte": "^5.43.8",
       "svelte-check": "^4.3.4",
       "typescript": "^5.9.3",
       "vite": "^7.2.2"
    },
    "dependencies": {
+      "@sveltejs/adapter-cloudflare": "^7.2.4",
       "bknd": "^0.19.0"
    }
 }
